# DigitReaderNeuralNetwork

./: .gitignore  README.md  digitreader.py  eval.py  feed.py  mnist_loader.py  network.py  pyproject.toml  train.py
.github/workflows/: static.yml
site/: digitreader.json  index.html  index.js  main.go  styles.css
site/Site/: index.html  index.js  styles.css
